fix footer and align major divs - including navbar

--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,8 @@ body, h1, h2, h3, h4, h5 {
 }
 
 .wrapper {
-	margin: 0.5em 0.5em;
-	padding: 0.5em auto;
+	margin: 1em 1em;
+	padding: 0 auto;
 }
 
 .navbar {
@@ -22,15 +22,28 @@ body, h1, h2, h3, h4, h5 {
 
 .logo {
 	display: inline-block;
+	margin-left: 2em;
+	float: left;
+	margin-top: 1em;
+
+}
+
+:after, :before {
+	box-sizing: border-box;
 }
 
 .navbar > ul {
 	list-style: none;
-	display: inline-block;
+	display: block;
+	text-align: right;
+	float: right;
+	margin-right: 1.5em;
 }
 
-ul li {
-	display: inline;
+li {
+	display: block;
+	position: relative;
+	float: left;
 }
 
 /* Marketing statement */
@@ -41,12 +54,13 @@ ul li {
 	padding: 0em 0em;
 }
 
-.banner > .main-text {
-
+.main-text {
+	font-size: 2em;
 }
 
-.banner > .description-text {
-	
+.description-text {
+	font-size: 1.2em;
+	font-style: italic;
 }
 
 /* Contains three key parts */
@@ -88,11 +102,13 @@ ul li {
 }
 */
 
-
 .footer {
 	display: block;
-	position: relative;
-	width: 100%;
-	margin: 1em auto;
-	padding: 1.5em 1em;
+	position:fixed;
+	left:0px;
+	bottom:0px;
+	height:50px;
+	width:100%;
+	background:#999;
+	text-align: center;
 }
